--- a/portfolio/static/portfolio/css/base/reset.css
+++ b/portfolio/static/portfolio/css/base/reset.css
@@ -141,3 +141,8 @@ table {
 * {
     box-sizing: border-box;
 }
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
